# bellatrix-india

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  implementation_plan.md  scaffold.py
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs
crates/agents/src/appsec/: agent.rs
crates/agents/src/malware/: agent.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs  ports.rs
crates/attack_graph/: Cargo.toml
crates/attack_graph/src/: graph.rs  lib.rs  serializer.rs
crates/core_domain/: Cargo.toml
crates/core_domain/src/: models.rs
crates/malware_crafter/: Cargo.toml
crates/malware_crafter/src/: engine.rs  evasion.rs  lib.rs  mutation.rs
crates/mcp_server/: Cargo.toml
crates/mcp_server/src/: lib.rs  router.rs
crates/mcp_server/src/tools/: analyze_ast.rs  craft_evasive_payload.rs  deploy_breakpoint.rs  generate_attack_graph.rs  generate_poc.rs  mod.rs  search_threat_intel.rs  simulate_lateral_movement.rs  trace_taint.rs
crates/sast_engine/: Cargo.toml
crates/sast_engine/src/: lib.rs  orchestrator.rs  taint.rs
crates/sca_engine/: Cargo.toml
crates/sca_engine/src/: advisory.rs  lib.rs  scanner.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MODULES.md  RAG_STRATEGY.md  REPORTING.md  SECURITY.md
docs/adr/: ADR-001-llm-provider-abstraction.md  ADR-002-docker-first-deployment.md  ADR-003-mcp-tool-interface.md  ADR-004-qdrant-rag.md
extension/: Cargo.toml  extension.toml
extension/src/: context_server.rs  dap.rs  diagnostics.rs  lib.rs  slash_commands.rs  tasks.rs
tests/: Cargo.toml  integration_test.rs
