[workspace]
members = [
    "crates/*",
    "bin/*",
    "tests"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
petgraph = "0.6"
tree-sitter = "0.20"
reqwest = { version = "0.11", features = ["json"] }
mockall = "0.12"
rstest = "0.18"
insta = "1.34"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
