[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
core_domain = { path = "../crates/core_domain" }
application = { path = "../crates/application" }
sast_engine = { path = "../crates/sast_engine" }
attack_graph = { path = "../crates/attack_graph" }
malware_crafter = { path = "../crates/malware_crafter" }
sca_engine = { path = "../crates/sca_engine" }
mcp_server = { path = "../crates/mcp_server" }
uuid = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[[test]]
name = "integration_test"
path = "integration_test.rs"
