[package]
name = "agents"
version = "0.1.0"
edition = "2021"

[dependencies]
core_domain = { path = "../core_domain" }
application = { path = "../application" }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
