[package]
name = "attack_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
core_domain = { path = "../core_domain" }
application = { path = "../application" }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
