[package]
name = "sca_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
core_domain = { path = "../core_domain" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
